# farm_game

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  FeedMill.h  Types.h  UiWidgets.h  WorkshopPanel.h  WorkshopSystem.h  workshop_system_guide.md  zjx_workshop.md
docs/ranch/: README.md  zgm_ranch_implementation_readme.md
docs/team_interfaces/: README.md  cdy_time_weather_save_control.md  gml_warehouse_shop.md  lly_order.md  zgm_ranch.md  zjx_workshop.md  zxc_planting.md
include/farm/: ChickenCoop.h  Constants.h  DemoRunner.h  FeedMill.h  Game.h  ItemCatalog.h  OrderSystem.h  PlantingSystem.h  PlayerState.h  RanchSystem.h  ShopSystem.h  Types.h  Warehouse.h  WorkshopSystem.h
include/ui/: AppUi.h  UiStyle.h  UiWidgets.h
include/ui/panels/: CoopPanel.h  FarmPanel.h  SidebarPanel.h  TopStatusBar.h  WorkshopPanel.h
src/: ChickenCoop.cpp  DemoRunner.cpp  FeedMill.cpp  Game.cpp  ItemCatalog.cpp  OrderSystem.cpp  PlantingSystem.cpp  PlayerState.cpp  RanchSystem.cpp  ShopSystem.cpp  Warehouse.cpp  WorkshopSystem.cpp  demo_main.cpp  main.cpp
src/ui/: AppUi.cpp  UiStyle.cpp  UiWidgets.cpp
src/ui/panels/: CoopPanel.cpp  FarmPanel.cpp  SidebarPanel.cpp  TopStatusBar.cpp  WorkshopPanel.cpp
tests/: test_farm_game.cpp
